force-app/main/default/objects/ContactAlert__c/ContactAlert__c.object-meta.xml
<CustomObject>
    <description>Associate Contacts with Alerts</description>
    <label>Contact Alert</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Contact Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>