force-app/main/default/objects/ContactAlert__c/fields/ContactLink__c.field-meta.xml
<CustomField>
    <fullName>ContactLink__c</fullName>
    <formula
  >HYPERLINK(Contact__c, Contact__r.FirstName + &#39; &#39; + Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>