force-app/main/default/objects/ContactAlert__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description
  >Contextual info message pertaining to the Contact for which the Alert is associated.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>